# ow

./: .clang-tidy  .gitignore  CMakeLists.txt  conanfile.py  install_deps.sh
.github/workflows/: build.yml
examples/application/: SDLWindowBackend.cpp  SDLWindowBackend.hpp  WindowBackend.hpp
examples/gltfload/: CMakeLists.txt  main.cpp
examples/imgui/: CMakeLists.txt  main.cpp
examples/imgui/imgui/bindings/: CMakeLists.txt
examples/riow/: CMakeLists.txt  main.cpp
examples/viewer/: CMakeLists.txt  main.cpp
examples/viewer/imgui/bindings/: CMakeLists.txt
ow/: CMakeLists.txt
ow/app/: application.h
ow/cg/: CMakeLists.txt  camera.cpp  camera.h  dielectric.cpp  dielectric.h  diffuse.cpp  diffuse.h  hittable.h  hittable_list.cpp  hittable_list.h  image.cpp  image.h  material.h  mesh.h  metal.cpp  metal.h  object.h  pbr_material.h  point_light.h  ray.h  sampler.cpp  sampler.h  scene.cpp  scene.h  sphere.cpp  sphere.h  triangle.h
ow/interactive/: CMakeLists.txt  camera_controller.h  glfw_input_handler.cpp  glfw_input_handler.h  input_handler.h  sdl2_input_handler.cpp  sdl2_input_handler.h
ow/io/: CMakeLists.txt  gltf.cpp  gltf.h  imageloader.cpp  imageloader.h  sceneloader.h  tinygltf_pch.h
ow/math/: CMakeLists.txt  mat3.cpp  mat3.h  mat4.cpp  mat4.h  quaternion.h  type_concepts.h  utils.cpp  utils.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
ow/render/: CMakeLists.txt  batch.h  batchingStrategy.cpp  batchingStrategy.h  openglrenderbackend.cpp  openglrenderbackend.h  quadrenderengine.cpp  quadrenderengine.h  renderengine.h  renderingbackend.h  shader.cpp  shader.h  simplerenderengine.cpp  simplerenderengine.h  uniform.cpp  uniform.h
ow/res/shaders/: CMakeLists.txt  blinnphong.glsl  pbr.glsl  quad.frag  quad.vert  simple.frag  simple.spv  simple.vert
ow/test/: CMakeLists.txt  glm_test.cpp  mat3_test.cpp  mat4_test.cpp  quaternion_test.cpp  turntable_controller_test.cpp
ow/utils/: CMakeLists.txt  fileio.h  threadpool.cpp  threadpool.h
